<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:tag="1"
        android:text="@string/a" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:tag="2"
        android:text="@string/i" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:tag="3"
        android:text="@string/u" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:tag="4"
        android:text="@string/e" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:tag="5"
        android:text="@string/o" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/button1"
        android:tag="10"
        android:text="@string/k" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignTop="@+id/button2"
        android:tag="20"
        android:text="@string/s" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button7"
        android:tag="30"
        android:text="@string/t" />

    <Button
        android:id="@+id/button10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button9"
        android:layout_below="@+id/button9"
        android:tag="50"
        android:text="@string/h" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button8"
        android:layout_below="@+id/button8"
        android:tag="40"
        android:text="@string/n" />

    <Button
        android:id="@+id/button11"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button10"
        android:layout_below="@+id/button10"
        android:tag="60"
        android:text="@string/m" />

    <Button
        android:id="@+id/button12"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button11"
        android:layout_below="@+id/button11"
        android:tag="70"
        android:text="@string/y" />

    <Button
        android:id="@+id/button13"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button12"
        android:layout_below="@+id/button12"
        android:tag="80"
        android:text="@string/r" />

    <Button
        android:id="@+id/button14"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button13"
        android:layout_below="@+id/button13"
        android:tag="90"
        android:text="@string/w" />

    <Button
        android:id="@+id/button15"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_centerHorizontal="true"
        android:tag="100"
        android:text="@string/g" />

    <Button
        android:id="@+id/button16"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button15"
        android:layout_alignTop="@+id/button7"
        android:tag="110"
        android:text="@string/z" />

    <Button
        android:id="@+id/button17"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button16"
        android:layout_alignTop="@+id/button8"
        android:tag="120"
        android:text="@string/d" />

    <Button
        android:id="@+id/button18"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button17"
        android:layout_alignTop="@+id/button9"
        android:tag="130"
        android:text="@string/b" />

    <Button
        android:id="@+id/button19"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignLeft="@+id/button18"
        android:tag="140"
        android:text="@string/p" />

    
    <Button
        android:id="@+id/button20"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button22"
        android:layout_alignTop="@+id/button16"
        android:layout_marginTop="22dp"
        android:tag="1000"
        android:text="C" />

    <Button
        android:id="@+id/button21"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button23"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:tag="1001"
        android:text="C#" />

    <Button
        android:id="@+id/button22"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button24"
        android:layout_below="@+id/button20"
        android:tag="1002"
        android:text="D" />

    <Button
        android:id="@+id/button23"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button21"
        android:layout_below="@+id/button17"
        android:tag="1003"
        android:text="D#" />
    
    <Button
        android:id="@+id/button24"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button25"
        android:layout_below="@+id/button22"
        android:tag="1004"
        android:text="E" />

    <Button
        android:id="@+id/button25"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button27"
        android:layout_below="@+id/button24"
        android:tag="1005"
        android:text="F" />
    <Button
        android:id="@+id/button26"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button23"
        android:layout_below="@+id/button19"
        android:tag="1006"
        android:text="F#" />
    
    <Button
        android:id="@+id/button27"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button29"
        android:layout_below="@+id/button25"
        android:tag="1007"
        android:text="G" />
    
    <Button
        android:id="@+id/button28"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button12"
        android:layout_alignLeft="@+id/button26"
        android:tag="1008"
        android:text="G#" />

    <Button
        android:id="@+id/button29"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button31"
        android:layout_below="@+id/button27"
        android:tag="1009"
        android:text="A" />

    <Button
        android:id="@+id/button30"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button14"
        android:layout_toRightOf="@+id/button31"
        android:tag="1010"
        android:text="A#" />

    <Button
        android:id="@+id/button31"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button29"
        android:layout_marginRight="13dp"
        android:layout_toLeftOf="@+id/button28"
        android:tag="1011"
        android:text="B" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button15"
        android:layout_toRightOf="@+id/button20"
        android:text="ToggleButton" />

</RelativeLayout>